# Target_localization

./: .gitignore  README.md
gimbal_servoing/: CMakeLists.txt  package.xml
gimbal_servoing/include/gimbal_viservo/: gimabl_kinematics.h  (+2 more)
gimbal_servoing/launch/: gimbal_bag_record.launch  gimbal_controll_video.launch  gimbal_viservo.launch
gimbal_servoing/msg/: GimbalState.msg  SpeedControl.msg
gimbal_servoing/siyi_camera_a8_mini/: gimbal_control_node.py  gimbal_speed_test.py  siyi_message.py  siyi_sdk.py  test_video.py  utils.py
gimbal_servoing/src/: EMA_test_node.cpp  gimbal_viservo_controller_node.cpp  gimbal_viservo_node.cpp
gimbal_servoing/srv/: ModeSwitch.srv  TargetPoint.srv
mono/: .gitignore  CMakeLists.txt  README.md  package.xml
mono/launch/: get_points_node.launch
mono/msg/: corners.msg
mono/script/: EKF_sim.py  UKF_sim.py  localization.py
mono/src/: get_points_node.cpp
yolov5_new/: .gitignore  CMakeLists.txt  package.xml
yolov5_new/launch/: detect.launch  image_bag_record.launch
yolov5_new/msg/: DetectBox.msg  VisionCarBoardPos.msg  YoloRes.msg
yolov5_new/scripts/: detect.py  detect_NEW.py  detect_listener.py  detect_without_filter.py  function.py  functions.py  miniA8_detect_node.py  pyrealsense2.cpython-36m-aarch64-linux-gnu.so.2.45.0  pyrealsense2.cpython-36m-aarch64-linux-gnu.so.2.54.1  target_detect_node.py  video_cap_node.py
yolov5_new/scripts/data/: coco128.yaml
yolov5_new/scripts/models/: common.py  experimental.py  export.py  yolo.py
yolov5_new/scripts/utils/: datasets.py  general.py  google_utils.py  torch_utils.py
(+2 files in other folders)
